--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,21 +19,40 @@ android {
     }
 }
 
+ext{
+    supportLibVersion = "26.1.0"
+    butterKnifeVersion = "8.8.1"
+    firebaseVersion = "11.4.2"
+    junitVersion = "4.12"
+    mockitoVersion = "2.7.19"
+    espressoCoreVersion = "2.2.2"
+}
+
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation "com.android.support:appcompat-v7:${supportLibVersion}"
+    implementation "com.android.support:support-v4:${supportLibVersion}"
+    compile "com.android.support:design:${supportLibVersion}"
+    compile "com.jakewharton:butterknife:${butterKnifeVersion}"
+    annotationProcessor "com.jakewharton:butterknife-compiler:${butterKnifeVersion}"
+    implementation "com.android.support:recyclerview-v7:${supportLibVersion}"
+    implementation "com.android.support:cardview-v7:${supportLibVersion}"
+    implementation "com.android.support:support-vector-drawable:${supportLibVersion}"
+    implementation "com.google.firebase:firebase-core:${firebaseVersion}"
+    implementation "com.google.firebase:firebase-database:${firebaseVersion}"
+    implementation "com.google.android.gms:play-services:${firebaseVersion}"
+    implementation "com.android.support:mediarouter-v7:${supportLibVersion}"
+    testCompile "org.mockito:mockito-android:${mockitoVersion}"
+    androidTestCompile("com.android.support.test.espresso:espresso-core:${espressoCoreVersion}", {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    compile 'com.journeyapps:zxing-android-embedded:3.4.0'
+    implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
     compile 'com.android.support:multidex:1.0.0'
-    implementation 'com.google.firebase:firebase-core:11.4.2'
-    implementation 'com.google.firebase:firebase-database:11.4.2'
-    implementation 'com.google.android.gms:play-services:11.4.2'
-    implementation 'com.android.support:mediarouter-v7:26.1.0'
-    compile 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
-    implementation 'com.android.support:cardview-v7:26.1.0'
-    implementation 'com.android.support:support-vector-drawable:26.1.0'
-    compile 'com.journeyapps:zxing-android-embedded:3.4.0'
-    implementation "android.arch.lifecycle:extensions:1.1.1"
+
+
+
 }
